adding interactive section

--- a/index.html
+++ b/index.html
@@ -516,6 +516,20 @@
             </li>
           </ul>
         </div>
+        <div class="interactive-box">
+          <p class="interactive-p">Subscribe</p>
+          <form class="interactive-form">
+            <label class="interactive-form-label" for=""
+              ><input
+                name="e-mail"
+                type="email"
+                placeholder="E-mail"
+                class="input-email"
+              />
+            </label>
+            <button class="interactive-btn" type="submit">Subscribe</button>
+          </form>
+        </div>
       </div>
     </footer>
     <div data-modal class="modal-container is-hidden">
