--- a/index.html
+++ b/index.html
@@ -527,7 +527,12 @@
                 class="input-email"
               />
             </label>
-            <button class="interactive-btn" type="submit">Subscribe</button>
+            <button class="interactive-btn" type="submit">
+              Subscribe
+              <svg height="24" width="24" class="interactive-btn-icon">
+                <use href="./images/icons.svg#icon-paper-plane"></use>
+              </svg>
+            </button>
           </form>
         </div>
       </div>
@@ -539,6 +544,15 @@
             <use href="./images/icons.svg#icon-close-black"></use>
           </svg>
         </button>
+        <p class="modal-p"></p>
+        <form>
+          <div class="modal-form">
+            <label for="user-name" class="modal-form-label">Name</label>
+          </div>
+          <div class="modal-input">
+            <input type="text" />
+          </div>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
