--- a/index.html
+++ b/index.html
@@ -550,7 +550,57 @@
             <label for="user-name" class="modal-form-label">Name</label>
           </div>
           <div class="modal-input">
-            <input type="text" />
+            <input type="text" class="modal-input-text" />
+            <svg width="18" height="24" class="input-name">
+              <use href="./images/icons.svg#icon-person-black"></use>
+            </svg>
+          </div>
+          <div class="modal-form">
+            <label for="user-name" class="modal-form-label">Phone</label>
+          </div>
+          <div class="modal-input">
+            <input type="text" class="modal-input-text" />
+            <svg width="18" height="24" class="input-name">
+              <use href="./images/icons.svg#icon-phone-black"></use>
+            </svg>
+          </div>
+          <div class="modal-form">
+            <label for="user-name" class="modal-form-label">Email</label>
+          </div>
+          <div class="modal-input">
+            <input type="text" class="modal-input-text" />
+            <svg width="18" height="24" class="input-name">
+              <use href="./images/icons.svg#icon-email-black"></use>
+            </svg>
+          </div>
+          <div class="modal-text-area">
+            <label for="user-comment" class="modal-form-label">Comment</label>
+            <textarea
+              name="user-comment"
+              id="user-comment"
+              cols="30"
+              rows="10"
+              placeholder="text input"
+              class="modal-text-area"
+            ></textarea>
+          </div>
+          <div class="modal-checkbox">
+            <input
+              type="checkbox"
+              name="user-privacy"
+              id="user-privacy"
+              value="true"
+              class="check-box-style visually-hidden"
+            />
+            <label for="user-privacy" class="checkbox-label"
+              >I accept the terms and conditions of the<span
+                class="checkbox-label-span"
+              >
+                <svg width="10" height="8" class="custom-chek">
+                  <use
+                    href="./images/icons.svg#icon-checkbox"
+                  ></use></svg></span
+            ></label>
           </div>
         </form>
       </div>
