--- a/portfolio.html
+++ b/portfolio.html
@@ -374,6 +374,25 @@
             </li>
           </ul>
         </div>
+        <div class="interactive-box">
+          <p class="interactive-p">Subscribe</p>
+          <form class="interactive-form">
+            <label class="interactive-form-label" for=""
+              ><input
+                name="e-mail"
+                type="email"
+                placeholder="E-mail"
+                class="input-email"
+              />
+            </label>
+            <button class="interactive-btn" type="submit">
+              Subscribe
+              <svg height="24" width="24" class="interactive-btn-icon">
+                <use href="./images/icons.svg#icon-paper-plane"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
