--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
         <div class="interactive-box">
           <p class="interactive-p">Subscribe</p>
           <form class="interactive-form">
-            <label class="interactive-form-label" for=""
+            <label class="interactive-form-label"
               ><input
                 name="e-mail"
                 type="email"
@@ -547,7 +547,7 @@
         <p class="modal-p"></p>
         <form>
           <div class="modal-form">
-            <label for="user-name" class="modal-form-label">Name</label>
+            <label class="modal-form-label">Name</label>
           </div>
           <div class="modal-input">
             <input type="text" class="modal-input-text" />
@@ -556,7 +556,7 @@
             </svg>
           </div>
           <div class="modal-form">
-            <label for="user-name" class="modal-form-label">Phone</label>
+            <label class="modal-form-label">Phone</label>
           </div>
           <div class="modal-input">
             <input type="text" class="modal-input-text" />
@@ -565,7 +565,7 @@
             </svg>
           </div>
           <div class="modal-form">
-            <label for="user-name" class="modal-form-label">Email</label>
+            <label class="modal-form-label">Email</label>
           </div>
           <div class="modal-input">
             <input type="text" class="modal-input-text" />
