--- a/portfolio.html
+++ b/portfolio.html
@@ -377,7 +377,7 @@
         <div class="interactive-box">
           <p class="interactive-p">Subscribe</p>
           <form class="interactive-form">
-            <label class="interactive-form-label" for=""
+            <label class="interactive-form-label"
               ><input
                 name="e-mail"
                 type="email"
