--- a/index.html
+++ b/index.html
@@ -544,64 +544,82 @@
             <use href="./images/icons.svg#icon-close-black"></use>
           </svg>
         </button>
-        <p class="modal-p"></p>
+        <p class="modal-p">Leave your contacts and we will call you back</p>
         <form>
           <div class="modal-form">
-            <label class="modal-form-label">Name</label>
-          </div>
-          <div class="modal-input">
-            <input type="text" class="modal-input-text" />
-            <svg width="18" height="24" class="input-name">
-              <use href="./images/icons.svg#icon-person-black"></use>
-            </svg>
-          </div>
-          <div class="modal-form">
-            <label class="modal-form-label">Phone</label>
-          </div>
-          <div class="modal-input">
-            <input type="text" class="modal-input-text" />
-            <svg width="18" height="24" class="input-name">
-              <use href="./images/icons.svg#icon-phone-black"></use>
-            </svg>
+            <label for="user-name" class="modal-form-label">Name</label>
+            <div class="modal-input">
+              <input
+                id="user-name"
+                name="user-name"
+                type="text"
+                class="modal-input-text"
+              />
+              <svg width="18" height="24" class="input-name">
+                <use href="./images/icons.svg#icon-person-black"></use>
+              </svg>
+            </div>
           </div>
           <div class="modal-form">
-            <label class="modal-form-label">Email</label>
+            <label for="phone" class="modal-form-label">Phone</label>
+
+            <div class="modal-input">
+              <input
+                id="phone"
+                name="input-phone"
+                type="text"
+                class="modal-input-text"
+              />
+              <svg width="18" height="24" class="input-name">
+                <use href="./images/icons.svg#icon-phone-black"></use>
+              </svg>
+            </div>
           </div>
-          <div class="modal-input">
-            <input type="text" class="modal-input-text" />
-            <svg width="18" height="24" class="input-name">
-              <use href="./images/icons.svg#icon-email-black"></use>
-            </svg>
+          <div class="modal-form">
+            <label for="email" class="modal-form-label">Email</label>
+
+            <div class="modal-input">
+              <input
+                id="email"
+                name="input-email"
+                type="text"
+                class="modal-input-text"
+              />
+              <svg width="18" height="24" class="input-name">
+                <use href="./images/icons.svg#icon-email-black"></use>
+              </svg>
+            </div>
           </div>
-          <div class="modal-text-area">
+          <div class="modal-text-style">
             <label for="user-comment" class="modal-form-label">Comment</label>
             <textarea
               name="user-comment"
               id="user-comment"
               cols="30"
               rows="10"
-              placeholder="text input"
+              placeholder="Text input"
               class="modal-text-area"
             ></textarea>
           </div>
           <div class="modal-checkbox">
             <input
-              type="checkbox"
-              name="user-privacy"
               id="user-privacy"
+              name="user-privacy"
+              type="checkbox"
               value="true"
-              class="check-box-style visually-hidden"
+              class="checkbox visually-hidden"
             />
-            <label for="user-privacy" class="checkbox-label"
-              >I accept the terms and conditions of the<span
-                class="checkbox-label-span"
-              >
+            <label for="user-privacy" class="check-box-style">
+              <span class="checkbox-label-span">
                 <svg width="10" height="8" class="custom-chek">
-                  <use
-                    href="./images/icons.svg#icon-checkbox"
-                  ></use></svg></span
-            ></label>
+                  <use href="./images/icons.svg#checkbox"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a href="" class="checkbox-a">Privacy Policy</a>
+            </label>
           </div>
+          <button type="submit" class="form-send-btn">Send</button>
         </form>
       </div>
     </div>
