add animation in modal window

--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
               value="true"
               class="checkbox visually-hidden"
             />
-            <label for="user-privacy" class="check-box-style">
+            <label for="user-privacy" class="checkbox-text">
               <span class="checkbox-label-span">
                 <svg width="10" height="8" class="custom-chek">
                   <use href="./images/icons.svg#checkbox"></use>
